# suckless-conf

./: .gitignore  CHANGELOG.md  flake.nix  suckless-conf.cabal
.fixme/: config  log
doc/: devlog
lib/Data/Config/: Suckless.hs
lib/Data/Config/Suckless/: KeyValue.hs  Parse.hs  Syntax.hs
lib/Data/Config/Suckless/Parse/: Fuzzy.hs  Megaparsec.hs
lib/Data/Config/Suckless/Script/: Internal.hs
t/: key-value-test-config
test/Data/Config/Suckless/: AesonSpec.hs  KeyValueSpec.hs
